final_system_build.log
WARNING: The requested image's platform (linux/amd64) does not match the detected host platform (linux/arm64/v8) and no specific platform was requested
info: syncing channel updates for nightly-x86_64-unknown-linux-gnu
info: latest update on 2026-04-18 for version 1.97.0-nightly (e9e32aca5 2026-04-17)
info: downloading 3 components
info: default toolchain set to nightly-x86_64-unknown-linux-gnu

  nightly-x86_64-unknown-linux-gnu installed - rustc 1.97.0-nightly (e9e32aca5 2026-04-17)

info: note that the toolchain 'nightly-x86_64-unknown-linux-gnu' is currently in use (overridden by '/src/rust-toolchain.toml')
info: syncing channel updates for nightly-x86_64-unknown-linux-gnu
info: latest update on 2026-04-18 for version 1.97.0-nightly (e9e32aca5 2026-04-17)
info: downloading component rust-src
info: component rust-src is up to date
    Updating crates.io index
 Downloading crates ...
  Downloaded bitflags v2.11.1
  Downloaded byteorder v1.5.0
  Downloaded bit v0.1.1
  Downloaded aead v0.5.2
  Downloaded block-buffer v0.10.4
  Downloaded cfg-if v1.0.4
  Downloaded chacha20 v0.9.1
  Downloaded bit_field v0.10.3
  Downloaded bitflags v1.3.2
  Downloaded aml v0.16.4
  Downloaded acpi v6.1.1
  Downloaded bitvec v1.0.1
  Downloaded rustversion v1.0.22
  Downloaded crossbeam-utils v0.8.21
  Downloaded funty v2.0.0
  Downloaded cpufeatures v0.2.17
  Downloaded cipher v0.4.4
  Downloaded conquer-once v0.4.0
  Downloaded paste v1.0.15
  Downloaded conquer-util v0.3.0
  Downloaded digest v0.10.7
  Downloaded chacha20poly1305 v0.10.1
  Downloaded sha2 v0.10.9
  Downloaded subtle v2.6.1
  Downloaded crypto-common v0.1.7
  Downloaded smoltcp v0.13.0
  Downloaded typenum v1.19.0
  Downloaded serde_core v1.0.228
  Downloaded generic-array v0.14.7
  Downloaded spinning_top v0.3.0
  Downloaded uart_16550 v0.3.2
  Downloaded const_fn v0.4.12
  Downloaded crossbeam-queue v0.3.12
  Downloaded stable_deref_trait v1.2.1
  Downloaded serde_derive v1.0.228
  Downloaded radium v0.7.0
  Downloaded hash32 v0.3.1
  Downloaded log v0.4.29
  Downloaded spin v0.9.8
  Downloaded opaque-debug v0.3.1
  Downloaded heapless v0.9.2
  Downloaded universal-hash v0.5.1
  Downloaded scopeguard v1.2.0
  Downloaded lazy_static v1.5.0
  Downloaded inout v0.1.4
  Downloaded tap v1.0.1
  Downloaded managed v0.8.0
  Downloaded limine v0.6.3
  Downloaded poly1305 v0.8.0
  Downloaded quote v1.0.45
  Downloaded pci_types v0.10.1
  Downloaded lock_api v0.4.14
  Downloaded nvme-oxide v0.4.1
  Downloaded linked_list_allocator v0.10.6
  Downloaded unicode-ident v1.0.24
  Downloaded spinning_top v0.2.5
  Downloaded proc-macro2 v1.0.106
  Downloaded serde v1.0.228
  Downloaded spin v0.10.0
  Downloaded raw-cpuid v10.7.0
  Downloaded raw-cpuid v11.6.0
  Downloaded syn v2.0.117
  Downloaded zeroize v1.8.2
  Downloaded x86_64 v0.15.4
  Downloaded wyz v0.5.1
  Downloaded x2apic v0.5.0
  Downloaded volatile v0.4.6
  Downloaded version_check v0.9.5
  Downloaded x86 v0.52.0
    Updating crates.io index
 Downloading crates ...
  Downloaded rustc-demangle v0.1.27
  Downloaded rustc-literal-escaper v0.0.7
  Downloaded getopts v0.2.24
  Downloaded foldhash v0.2.0
  Downloaded hashbrown v0.17.0
  Downloaded libc v0.2.185
   Compiling compiler_builtins v0.1.160 (/usr/local/rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/compiler-builtins/compiler-builtins)
   Compiling core v0.0.0 (/usr/local/rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/core)
   Compiling serde_core v1.0.228
   Compiling serde v1.0.228
   Compiling typenum v1.19.0
   Compiling generic-array v0.14.7
   Compiling radium v0.7.0
   Compiling x86 v0.52.0
   Compiling heapless v0.9.2
   Compiling crossbeam-utils v0.8.21
   Compiling smoltcp v0.13.0
   Compiling alloc v0.0.0 (/usr/local/rustup/toolchains/nightly-x86_64-unknown-linux-gnu/lib/rustlib/src/rust/library/alloc)
   Compiling scopeguard v1.2.0
   Compiling bitflags v2.11.1
   Compiling bit_field v0.10.3
   Compiling volatile v0.4.6
   Compiling byteorder v1.5.0
   Compiling lock_api v0.4.14
   Compiling bitflags v1.3.2
   Compiling cfg-if v1.0.4
   Compiling x86_64 v0.15.4
   Compiling raw-cpuid v10.7.0
   Compiling tap v1.0.1
   Compiling log v0.4.29
   Compiling spin v0.9.8
   Compiling cpufeatures v0.2.17
   Compiling spinning_top v0.2.5
   Compiling wyz v0.5.1
   Compiling hash32 v0.3.1
   Compiling crypto-common v0.1.7
   Compiling inout v0.1.4
   Compiling funty v2.0.0
   Compiling stable_deref_trait v1.2.1
   Compiling sex-pdx v0.1.0 (/src/crates/sex-pdx)
   Compiling subtle v2.6.1
   Compiling zeroize v1.8.2
   Compiling block-buffer v0.10.4
   Compiling universal-hash v0.5.1
   Compiling cipher v0.4.4
   Compiling bitvec v1.0.1
   Compiling libsys v0.1.0 (/src/sex-src/lib/libsys)
   Compiling spinning_top v0.3.0
   Compiling spin v0.10.0
   Compiling sex-rt v0.1.0 (/src/sex-rt)
   Compiling pci_types v0.10.1
   Compiling bit v0.1.1
   Compiling conquer-util v0.3.0
   Compiling managed v0.8.0
   Compiling opaque-debug v0.3.1
   Compiling x2apic v0.5.0
   Compiling acpi v6.1.1
   Compiling uart_16550 v0.3.2
   Compiling crossbeam-queue v0.3.12
   Compiling conquer-once v0.4.0
   Compiling poly1305 v0.8.0
   Compiling nvme-oxide v0.4.1
   Compiling chacha20 v0.9.1
   Compiling digest v0.10.7
   Compiling aead v0.5.2
   Compiling aml v0.16.4
   Compiling lazy_static v1.5.0
   Compiling linked_list_allocator v0.10.6
   Compiling raw-cpuid v11.6.0
   Compiling limine v0.6.3
   Compiling sha2 v0.10.9
   Compiling chacha20poly1305 v0.10.1
   Compiling tuxedo v0.1.0 (/src/servers/tuxedo)
   Compiling sexfiles v0.1.0 (/src/servers/sexfiles)
   Compiling sex-orbclient v0.1.0 (/src/crates/sex-orbclient)
error: an inner attribute is not permitted in this context
 --> servers/tuxedo/src/lib.rs:6:1
  |
6 | #![no_std]
  | ^^^^^^^^^^
7 |
8 | use sex_pdx::pdx_call;
  | ---------------------- the inner attribute doesn't annotate this `use` import
  |
  = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files

error[E0463]: can't find crate for `std`
  |
  = note: the `x86_64-sex` target may not support the standard library
  = note: `std` is required by `tuxedo` because it does not declare `#![no_std]`
  = help: consider building the standard library from source with `cargo build -Zbuild-std`

error: cannot resolve a prelude import

   Compiling sex-ld v0.1.0 (/src/servers/sex-ld)
warning: unused imports: `String` and `ToString`
 --> servers/tuxedo/src/lib.rs:3:21
  |
3 | use alloc::string::{String, ToString};
  |                     ^^^^^^  ^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `alloc::vec::Vec`
 --> servers/tuxedo/src/lib.rs:4:5
  |
4 | use alloc::vec::Vec;
  |     ^^^^^^^^^^^^^^^

warning: unused import: `alloc::boxed::Box`
 --> servers/tuxedo/src/lib.rs:5:5
  |
5 | use alloc::boxed::Box;
  |     ^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0463`.
warning: `tuxedo` (lib) generated 3 warnings
error: could not compile `tuxedo` (lib) due to 3 previous errors; 3 warnings emitted
warning: build failed, waiting for other jobs to finish...
warning: fields `fifo_q` and `lru_q` are never read
 --> servers/sexfiles/src/cache.rs:8:5
  |
7 | pub struct LruCache<const N: usize = 1024> {
  |            -------- fields in this struct
8 |     fifo_q: AtomicRing<u64, N>, // Q1: Recent accesses
  |     ^^^^^^
9 |     lru_q: AtomicRing<u64, N>,  // Q2: Frequent accesses
  |     ^^^^^
  |
  = note: `#[warn(dead_code)]` (part of `#[warn(unused)]`) on by default

warning: fields `id` and `size` are never read
  --> servers/sexfiles/src/backends/ramfs.rs:15:5
   |
14 | struct Inode {
   |        ----- fields in this struct
15 |     id: u64,
   |     ^^
16 |     size: u64,
   |     ^^^^

warning: `sexfiles` (lib) generated 2 warnings
